style: fix text alignment

--- a/css/partials/_forms.scss
+++ b/css/partials/_forms.scss
@@ -295,6 +295,7 @@ label,
 
 		[class^="badge"] {
 			justify-content: center;
+			text-align: center;
 			width: 100%;
 		}
 	}
